Fix visibility icon color: light

--- a/app/javascript/styles/mastodon-light.scss
+++ b/app/javascript/styles/mastodon-light.scss
@@ -44,7 +44,7 @@
     right: 10px;
     top: 20px;
     font: 14px/1 FontAwesome;
-    color: #606984;
+    color: #444b5d;
   }
 
   &-unlisted .display-name,
